# realtime-sleep-staging

./: .gitignore  README.md  dataset.py  demo.ipynb  evaluate.py  features.py  module.py  pyproject.toml  results.py  splits.py
data/: README.md  featurematrix.npz
tests/: test_causality_guard.py  test_dataset.py  test_features.py  test_fit_contract.py  test_splits.py
